--- a/config/o_aplikaci_sablona.html
+++ b/config/o_aplikaci_sablona.html
@@ -13,9 +13,9 @@
         <!-- KOPÍROVAT ODSUD -->
         <!-- Projet nástrojem https://codebeautify.org/remove-extra-spaces a vložit jako string do default.js - infoWidgetContent: "" -->
         <div class='about-widget'>
-            <h3>Hlášení závad ve městě</h3>
+            <h3>Online mapa MHD v Jihlavě</h3>
             <div>
-                <h4>Obsah mapové aplikace</h4> 
+                <h4>Autoři</h4> 
                 <p>
                     Lorem ipsum reprehenderit non officia nulla elit id. Officia laboris ipsum deserunt nostrud consequat incididunt qui tempor cillum veniam exercitation consectetur veniam. Reprehenderit elit laboris eiusmod nostrud commodo aliquip ipsum irure laborum qui reprehenderit id. Sint Lorem velit sunt cupidatat ipsum quis quis consectetur Lorem deserunt deserunt proident nucalcitella esse.
                 </p>
