Informační okno při nedostupnosti dat.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     </div>
     <!-- Map -->
     <div id="viewDiv"></div>
+    <!-- No Data Screen -->
+    <div id="no-data-screen">
+      <div class="no-data-container">
+        <div class="no-data-message">obsah</div>
+        <div class="no-data-close">Zavřít</div>
+      </div>
+    </div>
   </body>
   <script type="module" src="scripts/app.js"></script>
 </html>
